refactor: Update PersonalRecordService to return events instead of void
- Implement IPersonalRecordService interface
- Change processWorkoutForPersonalRecords to return List<PersonalRecordEvent>
- Update method signatures for event-driven architecture
- Prepare for immediate PR processing capabilities
- Maintain existing PR detection logic while enabling event collection